<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="mDataModel"
            type="com.example.jokesapp.dataModels.Joke" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_margin="@dimen/marginNormal"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="@dimen/marginNormal"
        app:cardElevation="@dimen/marginNormal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginNormal"
                android:layout_marginTop="@dimen/marginNormal"
                android:text="@string/JokeCategory"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtJokeCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{mDataModel.category}"
                android:textColor="#FF575555"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/category"
                app:layout_constraintEnd_toStartOf="@+id/detail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/category" />

            <TextView
                android:id="@+id/JokeType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginNormal"
                android:text="@string/JokeType"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/category"
                app:layout_constraintTop_toBottomOf="@+id/category" />

            <TextView
                android:id="@+id/txtJokeType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{mDataModel.type}"
                android:textColor="#575555"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/JokeType"
                app:layout_constraintStart_toEndOf="@+id/JokeType" />

            <Button
                android:id="@+id/detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginNormal"
                android:text="@string/strJoke"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</layout>